configuracao env para pasta consultas_agregacao
configuracao env para pasta /src/core/consultas_agregacao

--- a/.env
+++ b/.env
@@ -13,3 +13,7 @@ PATH_CSV_HOSPITAIS=./Trabalho_PEI/dados_vocabulario/dados_pei/Hospitais.csv
 PATH_CSV_SERVICOS=./Trabalho_PEI/dados_vocabulario/dados_pei/Servicos.csv
 PATH_CSV_ESPERA_CONSULTA=./Trabalho_PEI/dados_vocabulario/dados_pei/TemposEsperaConsultaCirurgia.csv
 PATH_CSV_ESPERA_URGENCIA=./Trabalho_PEI/dados_vocabulario/dados_pei/TemposEsperaEmergencia.csv
+
+# Caminho relativo da raiz até à pasta onde estão os schemas/models
+PATH_MODELS=./Trabalho_PEI/src/core/consultas_agregacao/models
+
