--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Configurações do Servidor e BD
 PORT=3000
-MONGO_URI=mongodb+srv://pei2024mais1_db_user:mwXSDbdWWwT0NG9q@pei.kya2r2x.mongodb.net/trabalho_pei #?authMechanism=DEFAULT
+MONGO_URI=mongodb+srv://pei2024mais1_db_user:mwXSDbdWWwT0NG9q@pei.kya2r2x.mongodb.net/ #trabalho_pei?authMechanism=DEFAUL
 
 # --- CAMINHOS DOS FICHEIROS (Links) ---
 # Todos os caminhos são relativos à pasta raiz do projeto (Trabalho_PEI)
