--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # Configurações do Servidor e BD
 PORT=3000
-MONGO_URI=mongodb+srv://pei2024mais1_db_user:mwXSDbdWWwT0NG9q@pei.kya2r2x.mongodb.net/trabalho
+MONGO_URI=mongodb+srv://pei2024mais1_db_user:mwXSDbdWWwT0NG9q@pei.kya2r2x.mongodb.net/HealthTime
+MONGO_ERROR_URI=mongodb+srv://pei2024mais1_db_user:mwXSDbdWWwT0NG9q@pei.kya2r2x.mongodb.net/Erros
 
 
 
